--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+install: apt addons
 install: gem install rake
 install: gem install telegram-bot-ruby
 install: gem install mediawiki_api
